fix scrollbar shifting contents to left

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,9 @@
 .App {
   font-family: 'Lato', sans-serif;
   overflow-x: hidden;
-  overflow: overlay;
+  overflow-y: scroll;
   scrollbar-width: thin; /*ONLY ON FIREFOX*/
-  scrollbar-color: aqua #575858;
+  scrollbar-color: aqua transparent;
   height: 100vh;
   min-width: 100vw;
 }
@@ -15,12 +15,11 @@
 }
 
 .App::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px transparent;
 }
 
 .App::-webkit-scrollbar-thumb {
   background-color: aqua;
-  outline: 1px solid slategrey;
 }
 
 /*          FLEX CSS LOGIC*/
